install/kubernetes/kubeflow/v1.2.0/.cache/manifests/manifests-1.2.0/gcp/iap-ingress/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false" 
    kubernetes.io/ingress.global-static-ip-name: $(ipName)
    networking.gke.io/managed-certificates: gke-certificate
  name: envoy-ingress
spec:
  backend:
    serviceName: istio-ingressgateway
    servicePort: 80
  rules:
  - host: $(hostname)
    http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
        path: /*
